# zkFuzz

./: .gitmodules  Cargo.toml  DESIGN.md  README.md  a.smt2  b.circom
.github/workflows/: tcct.yaml
audit/poc/wip/: HitShip.circom  IdentityAuth@circom-walkthrough.circom  NonSignalSort@circom-sorting.circom  arraySum.circom
benchmark/: circom_template_counts.csv  count.sh
benchmark/sample/: iszero_safe_linked.ll  iszero_safe_linked_overwrite.ll  iszero_safe_modified.ll  iszero_safe_modified_overwrite.ll  iszero_vuln.ll  iszero_vuln_overwritten.ll  iszero_vuln_overwritten_linked.ll
dataset/audit/: Modulus@ntru-circom.circom  ModulusSafe.circom
dataset/audit/wip/: Agecheck.circom  LayoutEligibility.circom  demo.circom  demo_2.circom  email_addr_with_name_regex.circom
dataset/audit/wip-zk-p2p/: namecheap_push.circom  namecheap_subject.circom  namecheap_transfer_details.circom
dataset/benchmark/: PermutationD.circom  eddsamimc.circom  overflow_LessThan.circom
examples/: a.rs  demo.rs  wasm.rs
experiment/: Behcnmark1 - GroundTruth - Sheet1.csv  README.md  experiment.sh  groundtruth.csv  install_circomspect.sh  install_picus.sh  install_picus_dependencies.sh  install_zkap.sh
experiment/benchmark1/darkforest-eth-9033eaf-fixed/: biomebase.circom  init.circom  move.circom  reveal.circom  test_PerlinValue.circom  test_range_proof.circom
experiment/benchmark1/maci-9b1b1a6-fixed/: hasher5_test.circom  (+14 more)
experiment/results/: Behcnmark1 - GroundTruth - Sheet1.csv  Behcnmark2 - GroundTruth - Sheet1.csv  README.md  result.csv
proofuzz/: ExtendedPrintGraphviz.cpp  ExtendedProtocolFlowGraph.cpp  ExtendedProtocolFlowGraph.hpp  MainAdderPass.cpp  helpers.cpp  helpers.hpp
src/: input_user.rs  main.rs
src/executor/: symbolic_execution.rs  symbolic_value.rs  utils.rs
src/mutator/: mutation_config.rs  mutation_test.rs  mutation_test_evolution_fn.rs  mutation_test_trace_fitness_fn.rs  mutation_test_trace_initialization_fn.rs  mutation_test_update_input_fn.rs  mutation_utils.rs  utils.rs
src/stats/: symbolic_stats.rs
tcct/: Cargo.toml  README.md  aggregate.sh  sample.sh
tcct/parameters/: seed.json
tcct/src/: a.txt  debug_ast.rs  input_user.rs  main.rs  parser_user.rs  solver.rs  stats.rs  symbolic_execution.rs  symbolic_value.rs
tcct/src/executor/: symbolic_execution.rs  symbolic_state.rs  symbolic_value.rs  utils.rs
tcct/src/mutator/: utils.rs
tcct/src/solver/: brute_force.rs  eval.rs  genetic_algorithm.rs  mod.rs  mutation_config.rs  mutation_setting.rs  mutation_test.rs  mutation_test_crossover_fn.rs  mutation_test_evolution_fn.rs  mutation_test_trace_fitness_fn.rs  mutation_test_trace_initialization_fn.rs  mutation_test_trace_mutation_fn.rs  mutation_test_trace_selection_fn.rs  mutation_test_update_input_fn.rs  mutation_utils.rs  unused_outputs.rs  utils.rs
tcct/src/stats/: ast_stats.rs  symbolic_stats.rs
tcct/tests/: coverage_test.rs  executor_test.rs  mutation_testing_test.rs  symbolic_executor_test.rs  symbolic_trace_emulation_test.rs  symbolic_value_test.rs  utils.rs  zero_division_test.rs
tcct/tests/sample/: average.circom  bulk_assignment.circom  call_const_template.circom  gcd.circom  input_subscript.circom  input_subscript_2d.circom  multidim_var_substitution.circom  nested_call.circom  recursive_call.circom  test_multi_dim_template_argument.circom  test_var_bulk_assignment.circom  test_vuln_iszero.circom_j9BXuA9k1j_counterexample.json  unused_output.circom
tests/: mutation_testing_test.rs  symbolic_executor_test.rs  symbolic_trace_emulation_test.rs  symbolic_value_test.rs  zero_division_test.rs
tests/sample/: a.circom  m.circom  montgomerydouble.circom
(+637 files in other folders)
