[package]
name = "zkfuzz"
version = "2.2.1"
edition = "2021"
authors = ["Koukyosyumei <koukyosyumei@hotmail.com>"]
description = "ZK Circuit Fuzzer"
license = "GPL-3.0"
repository = "https://github.com/Koukyosyumei/zkFuzz"
keywords = ["fuzzing", "security", "zero-knowledge-proof", "zkp"]

[[bin]]
name = "zkfuzz"
path = "src/main.rs"

[dependencies]
compiler = { git = "https://github.com/iden3/circom.git", package = "compiler", rev="9e5a950be1fb64fbde8d2917d8907f1e5463217e" }
type_analysis = { git = "https://github.com/iden3/circom.git", package = "type_analysis", rev="9e5a950be1fb64fbde8d2917d8907f1e5463217e" }
circom_algebra = { git = "https://github.com/iden3/circom.git", package = "circom_algebra", rev="9e5a950be1fb64fbde8d2917d8907f1e5463217e" }
constraint_list = { git = "https://github.com/iden3/circom.git", package = "constraint_list", rev="9e5a950be1fb64fbde8d2917d8907f1e5463217e" }
program_structure = { git = "https://github.com/iden3/circom.git", package = "program_structure", rev="9e5a950be1fb64fbde8d2917d8907f1e5463217e" }
constraint_generation = { git = "https://github.com/iden3/circom.git", package = "constraint_generation", rev="9e5a950be1fb64fbde8d2917d8907f1e5463217e" }
constraint_writers = { git = "https://github.com/iden3/circom.git", package = "constraint_writers", rev="9e5a950be1fb64fbde8d2917d8907f1e5463217e" }
constant_tracking = { git = "https://github.com/iden3/circom.git", package = "constant_tracking", rev="9e5a950be1fb64fbde8d2917d8907f1e5463217e" }
parser = { git = "https://github.com/iden3/circom.git", package = "parser", rev="9e5a950be1fb64fbde8d2917d8907f1e5463217e" }
code_producers= { git = "https://github.com/iden3/circom.git", package = "code_producers", rev="9e5a950be1fb64fbde8d2917d8907f1e5463217e" }
dag = { git = "https://github.com/iden3/circom.git", package = "dag", rev="9e5a950be1fb64fbde8d2917d8907f1e5463217e" }
clap = "2.33.0"
ansi_term = "0.12.1"
wast = "39.0.0"
exitcode = "1.1.2"
num-bigint-dig = { version = "0.6.0", features = ["rand"] }
log = "0.4.22"
env_logger = "0.11.5"
colored = "2.1.0"
num-traits = "0.2.15"
rustc-hash = { version = "2.1" }
rand = "0.7.0"
serde = {version = "1.0.217", features = ["derive"]}
serde_json = "1.0.134"
lazy_static = "1.4.0"
serde_with = "3.12.0"
ark-circom = "0.5.0"
ark-crypto-primitives = { version = "0.5.0" }
ark-ff = { version = "0.5.0", default-features = false, features = ["parallel", "asm"] }
ark-ec = { version = "0.5.0", default-features = false, features = ["parallel"] }
ark-std = { version = "0.5.0", default-features = false, features = ["parallel"] }
ark-bn254 = { version = "0.5.0" }
ark-groth16 = { version = "0.5.0", default-features = false, features = ["parallel"] }
ark-poly = { version = "0.5.0", default-features = false, features = ["parallel"] }
ark-relations = { version = "0.5.0", default-features = false }
ark-serialize = { version = "0.5.0", default-features = false }
num-bigint = { version = "0.4", features = ["rand", "serde"] }
wasmer = { version = "4.4.0", default-features = false }
wasmer-wasix = { version = "0.28.0", default-features = false }
tokio = { version = "1.29.1", features = ["macros"] }
wasm-mutate = "0.230.0"
